--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="calismalar">
     <h2>Çalışmalarım</h2>
     <p>GitHub hesabımda sızma testleri, zafiyetli web uygulamaları ve Python script projelerimi bulabilirsiniz.</p>
-    <a href="https://github.com/DEJAVUx2" target="_blank" rel="noopener noreferrer" >GitHub Profilime Git</a> <!-- Yeni sekmede açılır -->
+    <a href="https://github.com/EmrahTusun" target="_blank" rel="noopener noreferrer" >GitHub Profilime Git</a> <!-- Yeni sekmede açılır -->
     <p>Kariyerim, teknik becerilerim ve sektörle ilgili paylaşımlarım için LinkedIn profilimi inceleyebilirsiniz.</p>
     <p> İlgileniyorsanız bağlantı kurmaktan memnuniyet duyarım.</p>
     <a href="https://www.linkedin.com/in/emrah-tusun-7b13912b4" target="_blank" rel="noopener noreferrer" >Linkedln </a>
@@ -193,3 +193,4 @@
   </script>
 </body>
 </html>
+
