--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html> <!-- HTML5 doctype bildirimi -->
-<html lang="tr"> <!-- Sayfa dili Türkçe olarak ayarlandı -->
+<!DOCTYPE html>
+<html lang="tr">
 <head>
-  <meta charset="UTF-8" /> <!-- Türkçe karakter desteği için karakter seti -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <!-- Mobil uyumluluk için -->
-  <meta name="description" content="emrah tusun web sitesi"> <!-- Arama motorları için açıklama -->
-  <meta name="keywords" content="emrah , siber güvenlik , linux, soc"> <!-- Arama motorları için anahtar kelimeler -->
-  <title>EMRAH</title> <!-- Sekmede görünen başlık -->
-  <link rel="stylesheet" href="style.css" /> <!-- Harici CSS dosyasını bağlar -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="emrah tusun web sitesi">
+  <meta name="keywords" content="emrah , siber güvenlik , linux, soc">
+  <title>EMRAH</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- ÜST MENÜ (NAVBAR) -->
   <header class="navbar">
     <div class="logo">
-      <a href="#hero"> <!-- Logo tıklandığında en üste götürür -->
-        <img src="hacker.png" width="100" alt="Logo" /> <!-- Logo resmi -->
+      <a href="#hero">
+        <img src="hacker.png" width="100" alt="Logo" />
       </a>
     </div>
 
-    <!-- Hamburger buton -->
     <button class="hamburger" aria-label="Menüyü aç/kapat" aria-expanded="false">
       <span></span>
       <span></span>
@@ -26,7 +24,6 @@
 
     <nav>
       <ul>
-        <!-- Navigasyon menü öğeleri -->
         <li><a href="#hero" class="active">Anasayfa</a></li>
         <li><a href="#hakkimda">Hakkımda</a></li>
         <li><a href="#calismalar">Çalışmalar</a></li>
@@ -37,19 +34,16 @@
     </nav>
   </header>
 
-  <!-- KAHRAMAN ALANI (Giriş kısmı) -->
   <section id="hero" class="hero">
-    <h1 class="title">SİBER<br/>GÜVENLİK</h1> <!-- Ana başlık -->
-    <p class="scroll">DAHA FAZLASI İÇİN AŞAĞI KAYDIR</p> <!-- Bilgilendirici metin -->
+    <h1 class="title">SİBER<br/>GÜVENLİK</h1>
+    <p class="scroll">DAHA FAZLASI İÇİN AŞAĞI KAYDIR</p>
   </section>
 
-  <!-- ANASAYFA BİLGİLENDİRME -->
   <section id="anasayfa">
     <h2>Hoş Geldiniz</h2>
     <p>Siber güvenliğe adim at, bilgiye güç kat!</p>
   </section>
 
-  <!-- HAKKIMDA BÖLÜMÜ -->
   <section id="hakkimda">
     <h2>Hakkımda</h2>
     <p>Ben Emrah Tusun. Siber güvenlik alanında çalışıyor ve bu alanda derinleşmeye odaklanıyorum.
@@ -57,55 +51,51 @@
     Sızma testleri, tersine mühendislik ve CTF yarışmalarıyla teknik becerilerimi artırıyorum. Hedefim Türkiye'de ve dünyada dijital güvenliğe katkı sunmak.</p>
   </section>
 
-  <!-- ÇALIŞMALARIM BÖLÜMÜ -->
   <section id="calismalar">
     <h2>Çalışmalarım</h2>
     <p>GitHub hesabımda sızma testleri, zafiyetli web uygulamaları ve Python script projelerimi bulabilirsiniz.</p>
-    <a href="https://github.com/EmrahTusun" target="_blank" rel="noopener noreferrer" >GitHub Profilime Git</a> <!-- Yeni sekmede açılır -->
+    <a href="https://github.com/EmrahTusun" target="_blank" rel="noopener noreferrer">GitHub Profilime Git</a>
     <p>Kariyerim, teknik becerilerim ve sektörle ilgili paylaşımlarım için LinkedIn profilimi inceleyebilirsiniz.</p>
     <p> İlgileniyorsanız bağlantı kurmaktan memnuniyet duyarım.</p>
-    <a href="https://www.linkedin.com/in/emrah-tusun-7b13912b4" target="_blank" rel="noopener noreferrer" >Linkedln </a>
+    <a href="https://www.linkedin.com/in/emrah-tusun-7b13912b4" target="_blank" rel="noopener noreferrer">Linkedln</a>
   </section>
 
-  <!-- DENEYİMLER BÖLÜMÜ -->
   <section id="Deneyimler">
     <h2>Deneyimler</h2>
-     <p>
+    <p>
     Akbank SOC (Security Operations Center) eğitimi aldım ve olay müdahale süreçleri üzerine deneyim kazandım. <br/>
     Siber Vatan Siber Güvenlik eğitim programına katılarak siber güvenlik temelleri ve ileri düzey konularda kendimi geliştirdim. <br/>
     Cisco platformunda CCNA eğitimine başladım, ağ yönetimi ve temel network güvenliği hakkında bilgi sahibiyim. <br/>
     Hem mavi takım (defansif güvenlik) hem de kırmızı takım (penetrasyon testleri ve saldırı simülasyonları) alanlarında aktif olarak çalışıyor ve tecrübe kazanıyorum.
-  </p>
+    </p>
   </section>
 
-  <!-- SERTİFİKALAR BÖLÜMÜ -->
   <section id="sertifikalar">
     <h2>Sertifikam</h2>
     <p>SiberVatan yolculuğumun ilk adımı!</p>
     
     <div class="cert-single">
       <a href="FOTO.png" target="_blank" class="cert-link">
-        <img src="FOTO.png" alt="Siber Vatan Sertifikası" /> <!-- Sertifika görseli -->
+        <img src="FOTO.png" alt="Siber Vatan Sertifikası" />
       </a>
       <p>Siber Vatan Bootcamp Katılım Sertifikası</p>
     </div>
 
     <div class="cert-single">
       <a href="AKBANK.png" target="_blank" class="cert-link">
-        <img src="AKBANK.png" alt="Akbank" /> <!-- Sertifika görseli -->
+        <img src="AKBANK.png" alt="Akbank" />
       </a>
-      <p>Siber Güvenlik Analisti Eğitim Programı </p>
+      <p>Siber Güvenlik Analisti Eğitim Programı</p>
     </div>
 
-      <div class="cert-single">
+    <div class="cert-single">
       <a href="cyber.png" target="_blank" class="cert-link">
-        <img src="cyber.png" alt="CyberOps Associate" /> <!-- Sertifika görseli -->
+        <img src="cyber.png" alt="CyberOps Associate" />
       </a>
       <p>CyberOps Associate</p>
     </div>
   </section>
 
-  <!-- İLETİŞİM BİLGİLERİ -->
   <section id="iletisim">
     <h2>İletişim</h2>
     <p>Benimle iletişime geçmek için aşağıdaki formu kullanabilirsiniz.</p>
@@ -124,28 +114,25 @@
     </form>
   </section>
 
-  <!-- ALT BİLGİ (FOOTER) -->
   <footer>
     <p>© 2025 Emrah Tusun. Tüm hakları saklıdır.</p>
     <p>İletişim: emrahtusun0@gmail.com</p>
   </footer>
 
-  <!-- FARE HAREKETİYLE YILDIZ ANİMASYONU -->
   <script>
-    // Değişken tanımları
     let x1 = 0, y1 = 0;
     const vh = Math.max(document.documentElement.clientHeight || 0, window.innerHeight || 0),
-      dist_to_draw = 50, // minimum mesafe
-      delay = 1000, // animasyon süresi
-      fsize = ['1.1rem', '1.4rem', '.8rem', '1.7rem'], // yazı boyutu seçenekleri
-      colors = ['#E23636', '#F9F3EE', '#E1F8DC', '#B8AFE6', '#AEE1CD', '#5EB0E5'], // renkler
-      rand = (min, max) => Math.floor(Math.random() * (max - min + 1)) + min, // rastgele sayı
-      selRand = (o) => o[rand(0, o.length - 1)], // listeden rastgele seç
-      distanceTo = (x1, y1, x2, y2) => Math.sqrt((Math.pow(x2 - x1, 2)) + (Math.pow(y2 - y1, 2))), // iki nokta arası mesafe
-      shouldDraw = (x, y) => distanceTo(x1, y1, x, y) >= dist_to_draw, // yeterince uzaksa çizecek
+      dist_to_draw = 50,
+      delay = 1000,
+      fsize = ['1.1rem', '1.4rem', '.8rem', '1.7rem'],
+      colors = ['#E23636', '#F9F3EE', '#E1F8DC', '#B8AFE6', '#AEE1CD', '#5EB0E5'],
+      rand = (min, max) => Math.floor(Math.random() * (max - min + 1)) + min,
+      selRand = (o) => o[rand(0, o.length - 1)],
+      distanceTo = (x1, y1, x2, y2) => Math.sqrt((Math.pow(x2 - x1, 2)) + (Math.pow(y2 - y1, 2))),
+      shouldDraw = (x, y) => distanceTo(x1, y1, x, y) >= dist_to_draw,
       addStr = (x, y) => {
         const str = document.createElement("div");
-        str.innerHTML = '&#10022;'; // yıldız karakteri
+        str.innerHTML = '&#10022;';
         str.className = 'star';
         str.style.top = `${y + rand(-20, 20)}px`;
         str.style.left = `${x}px`;
@@ -162,11 +149,10 @@
           fill: 'forwards',
         });
         setTimeout(() => {
-          str.remove(); // animasyon bittikten sonra kaldır
+          str.remove();
         }, delay);
       };
 
-    // Mouse hareketi olunca yıldız çiz
     addEventListener("mousemove", (e) => {
       const { clientX, clientY } = e;
       if (shouldDraw(clientX, clientY)) {
@@ -177,7 +163,6 @@
     });
   </script>
 
-  <!-- Hamburger menü için JS -->
   <script>
     const hamburger = document.querySelector('.hamburger');
     const navMenu = document.querySelector('.navbar nav');
@@ -186,11 +171,9 @@
       hamburger.classList.toggle('active');
       navMenu.classList.toggle('active');
 
-      // Erişilebilirlik için aria-expanded ayarı
       const expanded = hamburger.getAttribute('aria-expanded') === 'true';
       hamburger.setAttribute('aria-expanded', !expanded);
     });
   </script>
 </body>
 </html>
-
