--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </section>
 
   <section id="sertifikalar">
-    <h2>Sertifikam</h2>
+    <h2>Sertifikalarım</h2>
     <p>SiberVatan yolculuğumun ilk adımı!</p>
     
     <div class="cert-single">
@@ -177,3 +177,4 @@
   </script>
 </body>
 </html>
+
