--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <section id="sertifikalar">
     <h2>Sertifikalarım</h2>
-    <p>SiberVatan yolculuğumun ilk adımı!</p>
+    <p>Siber Güvenlik yolculuğumun ilk adımı!</p>
     
     <div class="cert-single">
       <a href="FOTO.png" target="_blank" class="cert-link">
@@ -177,4 +177,5 @@
   </script>
 </body>
 </html>
+
 
